--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -7,6 +7,6 @@ jobs:
       - name: Pring greating
         run: echo "Hello World!"
       - name: Hostname check
-        run: date | hostname
+        run: date ; hostname
       - name: Pring goodbye
         run: echo "All done! Goodbye =)"
